# setup-uv

./: .eslintrc.json  .gitattributes  .gitignore  AGENTS.md  CODEOWNERS  Gh  LICENSE  PLAN.md  README.md  RESOLUTION_STRATEGY_DEMO.md  SECURITY.md  action-types.yml  action.yml  biome.json  jest.config.mjs  package-lock.json  package.json  tsconfig.json  version-manifest.json
.github/: actionlint.yaml  copilot-instructions.md  dependabot.yml  python.json  release-drafter.yml
.github/scripts/: check-all-tests-passed-needs.js  check-all-tests-passed-needs.ts  tsconfig.json
.github/workflows/: check-dist.yml  codeql-analysis.yml  dependabot-build.yml  release-drafter.yml  release.yml  sync-fork.yml  test-cache-windows.yml  test-cache.yml  test-latest-windows.yml  test-windows.yml  test.yml  test2.yml  update-default-version.yml  update-docs.yml  update-known-checksums.yml  update-known-versions.yml  update-major-minor-tags.yml
__tests__/cache/: restore-cache.test.ts
__tests__/download/: custom-manifest.json  custom-manifest.ndjson  download-version.test.ts  manifest.test.ts  resolution-strategy.test.ts  version-manifest.test.ts  versions-client.test.ts
__tests__/fixtures/: .tool-versions  checksumfile
__tests__/fixtures/pyproject-toml-project/: hello.py  pyproject.toml
docs/: advanced-version-configuration.md  caching.md  customization.md  environment-and-tools.md  threat-model.md
scripts/: bench-versions-client.mjs  build-dist.mjs
src/: save-cache.ts  setup-uv.ts  update-default-version.ts  update-known-checksums.ts  update-known-versions.ts
(+55 files in other folders)
